--- a/Bikaficionado.Wpf/MainWindow.xaml
+++ b/Bikaficionado.Wpf/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Bikaficionado.Wpf"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded">
+        Title="MainWindow" Height="407.935" Width="467.391" Loaded="Window_Loaded">
     <Grid>
         <ListBox x:Name="lstFietsen" HorizontalAlignment="Left" Height="160" Margin="10,64,0,0" VerticalAlignment="Top" Width="150" SelectionChanged="lstFietsen_SelectionChanged"/>
         <Label x:Name="lblTitel" Content="" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Width="150"/>
@@ -22,6 +22,10 @@
         <ComboBox x:Name="cmbWinkel" HorizontalAlignment="Left" Margin="10,31,0,0" VerticalAlignment="Top" Width="150" SelectionChanged="cmbWinkel_SelectionChanged"/>
         <TextBox x:Name="txtWinkelNaam" HorizontalAlignment="Left" Height="23" Margin="183,31,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="btnVoegWinkelToe" Content="+" HorizontalAlignment="Left" Margin="312,29,0,0" VerticalAlignment="Top" Width="27" Height="27" Click="btnVoegWinkelToe_Click"/>
+        <Button Content="Nieuw" HorizontalAlignment="Left" Margin="192,217,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Verwijder" HorizontalAlignment="Left" Margin="357,217,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Sla Op" HorizontalAlignment="Left" Margin="275,217,0,0" VerticalAlignment="Top" Width="75"/>
+        <TextBlock x:Name="tbkFeedBack" HorizontalAlignment="Left" Margin="10,253,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="102" Width="422" Background="#FFDFF9F2" Foreground="#FFFBFBFB" Padding="5"/>
 
     </Grid>
 </Window>
