--- a/Bikaficionado.Wpf/MainWindow.xaml
+++ b/Bikaficionado.Wpf/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Bikaficionado.Wpf"
         mc:Ignorable="d"
         Title="MainWindow" Height="407.935" Width="467.391" Loaded="Window_Loaded">
-    <Grid>
+    <Grid >
         <ListBox x:Name="lstFietsen" HorizontalAlignment="Left" Height="160" Margin="10,64,0,0" VerticalAlignment="Top" Width="150" SelectionChanged="lstFietsen_SelectionChanged"/>
         <Label x:Name="lblTitel" Content="" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Width="150"/>
         <Label Content="Merk" HorizontalAlignment="Left" Margin="187,64,0,0" VerticalAlignment="Top" Width="120"/>
@@ -14,17 +14,19 @@
         <Label Content="Aankoopdatum" HorizontalAlignment="Left" Margin="187,152,0,0" VerticalAlignment="Top" Width="120"/>
         <Label Content="Electrisch?" HorizontalAlignment="Left" Margin="187,121,0,0" VerticalAlignment="Top" Width="120"/>
         <Label Content="Aantal wielen" HorizontalAlignment="Left" Margin="187,90,0,0" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtMerk" HorizontalAlignment="Left" Height="23" Margin="312,68,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtSnelheid" HorizontalAlignment="Left" Height="23" Margin="312,183,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <ComboBox x:Name="cmbAantalWielen" HorizontalAlignment="Left" Margin="312,94,0,0" VerticalAlignment="Top" Width="120"/>
-        <CheckBox x:Name="chkElektrisch" Content="" HorizontalAlignment="Left" Margin="311,129,0,0" VerticalAlignment="Top"/>
-        <DatePicker x:Name="dtpAankoopDatum" HorizontalAlignment="Left" Margin="312,154,0,0" VerticalAlignment="Top" Width="120"/>
+        <Grid x:Name="grdInput" Margin="311,68,18,167">
+            <TextBox x:Name="txtMerk" HorizontalAlignment="Left" Height="23" Margin="1,0,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+            <TextBox x:Name="txtSnelheid" HorizontalAlignment="Left" Height="23" Margin="1,115,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+            <ComboBox x:Name="cmbAantalWielen" HorizontalAlignment="Left" Margin="1,26,0,0" VerticalAlignment="Top" Width="120"/>
+            <CheckBox x:Name="chkElektrisch" Content="" HorizontalAlignment="Left" Margin="0,61,0,0" VerticalAlignment="Top"/>
+            <DatePicker x:Name="dtpAankoopDatum" HorizontalAlignment="Left" Margin="1,86,0,0" VerticalAlignment="Top" Width="120"/>
+        </Grid>
         <ComboBox x:Name="cmbWinkel" HorizontalAlignment="Left" Margin="10,31,0,0" VerticalAlignment="Top" Width="150" SelectionChanged="cmbWinkel_SelectionChanged"/>
         <TextBox x:Name="txtWinkelNaam" HorizontalAlignment="Left" Height="23" Margin="183,31,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="btnVoegWinkelToe" Content="+" HorizontalAlignment="Left" Margin="312,29,0,0" VerticalAlignment="Top" Width="27" Height="27" Click="btnVoegWinkelToe_Click"/>
         <Button Content="Nieuw" HorizontalAlignment="Left" Margin="192,217,0,0" VerticalAlignment="Top" Width="75"/>
         <Button Content="Verwijder" HorizontalAlignment="Left" Margin="357,217,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Content="Sla Op" HorizontalAlignment="Left" Margin="275,217,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="btnSlaOp" Content="Sla Op" HorizontalAlignment="Left" Margin="275,217,0,0" VerticalAlignment="Top" Width="75" Click="btnSlaOp_Click"/>
         <TextBlock x:Name="tbkFeedBack" HorizontalAlignment="Left" Margin="10,253,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="102" Width="422" Background="#FFDFF9F2" Foreground="#FFFBFBFB" Padding="5"/>
 
     </Grid>
