--- a/Bikaficionado.Wpf/MainWindow.xaml
+++ b/Bikaficionado.Wpf/MainWindow.xaml
@@ -24,8 +24,8 @@
         <ComboBox x:Name="cmbWinkel" HorizontalAlignment="Left" Margin="10,31,0,0" VerticalAlignment="Top" Width="150" SelectionChanged="cmbWinkel_SelectionChanged"/>
         <TextBox x:Name="txtWinkelNaam" HorizontalAlignment="Left" Height="23" Margin="183,31,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="btnVoegWinkelToe" Content="+" HorizontalAlignment="Left" Margin="312,29,0,0" VerticalAlignment="Top" Width="27" Height="27" Click="btnVoegWinkelToe_Click"/>
-        <Button Content="Nieuw" HorizontalAlignment="Left" Margin="192,217,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Content="Verwijder" HorizontalAlignment="Left" Margin="357,217,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="btnNieuw" Content="Nieuw" HorizontalAlignment="Left" Margin="192,217,0,0" VerticalAlignment="Top" Width="75" Click="btnNieuw_Click"/>
+        <Button x:Name="btnVerwijder" Content="Verwijder" HorizontalAlignment="Left" Margin="357,217,0,0" VerticalAlignment="Top" Width="75" Click="btnVerwijder_Click"/>
         <Button x:Name="btnSlaOp" Content="Sla Op" HorizontalAlignment="Left" Margin="275,217,0,0" VerticalAlignment="Top" Width="75" Click="btnSlaOp_Click"/>
         <TextBlock x:Name="tbkFeedBack" HorizontalAlignment="Left" Margin="10,253,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="102" Width="422" Background="#FFDFF9F2" Foreground="#FFFBFBFB" Padding="5"/>
 
